--- a/style.css
+++ b/style.css
@@ -27,11 +27,12 @@ body {
   font-family: "Raleway";
   max-width: 1500px;
   margin: 0 auto;
-  padding-left: 1.25rem;
+  padding-left: 1%;
+  padding-right: 1%;
 }
 
 header {
-  width: 100%;
+  /* width: 100%; */
   /* min-width: 1350px; */
 }
 
@@ -91,7 +92,7 @@ header {
 .menu {
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  /* width: 100%; */
   /* min-width: 1350px; */
 }
 
@@ -125,7 +126,7 @@ header {
 /*Barre de recherche*/
 
 .form {
-  width: 100%;
+  /* width: 100%; */
   margin-bottom: 1.5rem;
 }
 
@@ -189,7 +190,7 @@ button p {
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: center;
-  width: 100%;
+  /* width: 100%; */
   font-size: 15px;
 }
 
@@ -260,11 +261,11 @@ p {
 
 footer {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: space-between;
   background-color: #f2f2f2;
   /* padding: 1.25rem; */
-  width: 100%;
+  /* width: 100%; */
   padding-right: unset;
 }
 
@@ -303,7 +304,7 @@ figure:hover {
 #hebergements_marseille {
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
+  width: 97%;
   height: 90%;
 }
 
@@ -376,7 +377,7 @@ figure:hover {
   height: 7.5rem;
   border-radius: 1.25rem;
   padding: 0.1875rem;
-  width: 100%;
+  /* width: 100%; */
   margin-inline-start: 0%;
 }
 
@@ -406,7 +407,7 @@ figure:hover {
 #populaires_marseille {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  /* width: 100%; */
   height: 90%;
 }
 
@@ -435,7 +436,7 @@ figure:hover {
 .hebergement-et-populaire {
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  /* width: 100%; */
   /* min-width: 1350px; */
 }
 
@@ -468,7 +469,7 @@ figure:hover {
 #Activites {
   background-color: white;
   margin-top: 3.125rem;
-  width: 100%;
+  /* width: 100%; */
 }
 
 #Activites > div {
