--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,26 +1,3 @@
-/* @font-face {
-  font-family: "Raleway";
-  src: url("fonts/Raleway-Regular.ttf") format("ttf")
-    url("fonts/Raleway-Black.ttf") format("ttf")
-    url("fonts/Raleway-BlackItalic.ttf") format("ttf")
-    url("fonts/Raleway-Bold.ttf") format("ttf")
-    url("fonts/Raleway-BoldItalic.ttf") format("ttf")
-    url("fonts/Raleway-ExtraBold.ttf") format("ttf")
-    url("fonts/Raleway-ExtraBoldItalic.ttf") format("ttf")
-    url("fonts/Raleway-ExtraLight.ttf") format("ttf")
-    url("fonts/Raleway-ExtraLightItalic.ttf") format("ttf")
-    url("fonts/Raleway-Italic-VariableFont_wght.ttf") format("ttf")
-    url("fonts/Raleway-Italic.ttf") format("ttf") url("fonts/Raleway-Light.ttf")
-    format("ttf") url("fonts/Raleway-LightItalic.ttf") format("ttf")
-    url("fonts/Raleway-Medium.ttf") format("ttf")
-    url("fonts/Raleway-MediumItalic.ttf") format("ttf")
-    url("fonts/Raleway-SemiBold.ttf") format("ttf")
-    url("fonts/Raleway-SemiBoldItalic.ttf") format("ttf")
-    url("fonts/Raleway-Thin.ttf") format("ttf")
-    url("fonts/Raleway-ThinItalic.ttf") format("ttf")
-    url("fonts/Raleway-VariableFont_wght.ttf") format("ttf");
-} */
-
 /*Corps de la page*/
 
 body {
@@ -29,11 +6,6 @@ body {
   margin: 0 auto;
   padding-left: 1%;
   padding-right: 1%;
-}
-
-header {
-  /* width: 100%; */
-  /* min-width: 1350px; */
 }
 
 /*Icônes*/
@@ -126,14 +98,12 @@ header {
 /*Barre de recherche*/
 
 .form {
-  /* width: 100%; */
   margin-bottom: 1.5rem;
 }
 
 .formulaire {
   width: fit-content;
   height: 2.5rem;
-  border: solid 1px #f2f2f2;
   display: flex;
   border-radius: 1rem;
   overflow: hidden;
@@ -158,6 +128,8 @@ button p {
 
 .barre {
   border: unset;
+  border-top: solid 1px #f2f2f2;
+  border-bottom: solid 1px #f2f2f2;
   padding: 0.625rem;
 }
 
